fix(title-bar): adjust spacing

--- a/src/components/UNSTABLE__LayoutModules/TitleBarModule/_index.scss
+++ b/src/components/UNSTABLE__LayoutModules/TitleBarModule/_index.scss
@@ -16,19 +16,25 @@
   $title-bar__spacing: $carbon--layout-01;
 
   display: flex;
-  align-items: center;
 
   &__title {
     @include carbon--type-style($name: productive-heading-03);
     margin-top: $title-bar__spacing;
     margin-bottom: $title-bar__spacing;
-
-    &--subsection {
-      @include carbon--type-style($name: productive-heading-02);
-    }
   }
 
   &__items {
+    margin-top: $carbon--spacing-02;
     margin-left: auto;
+  }
+
+  &--subsection > & {
+    &__title {
+      @include carbon--type-style($name: productive-heading-02);
+    }
+
+    &__items {
+      margin-top: 0;
+    }
   }
 }
